Fixed anchor margin collapsing problem Only using the pseudo element approach on non-footnote anchors, as otherwise undesirable blank lines are added.
Also
* Removed redundant <div>
* Adjusted min screen width for floating TOC
* Footnote target anchor changes to blue
* Removed some redundant CSS
* Check if TOC exists, using closure to store currentSection

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -139,7 +139,7 @@
     opacity: 1;
 }
 
-@media only screen and (min-width: 1300px) and (min-height: 500px) {
+@media only screen and (min-width: 1250px) and (min-height: 500px) {
     #toc {
         width: 13%;
         max-width: 250px;
